--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,7 @@
               <a href="#contato" class="btn-ghost">Contato</a>
             </div>
 
-            <p class="readme-kicker">
-              Open Source • Educativo • De desenvolvedor para desenvolvedor
-            </p>
+            <p class="readme-kicker">De desenvolvedor para desenvolvedor</p>
           </div>
 
           <hr class="readme-hr" />
