--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
             <div class="contact-actions">
               <a
                 class="icon-btn icon-btn-surface"
-                href="mailto:ossmoralus@proton.me"
+                href="mailto:ossmoralus@gmail.com"
                 aria-label="Enviar email"
                 title="Email"
               >
