arrumando a politica de privacidade, termos e corrigindo o html

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,19 @@
               alt="Banner"
               class="readme-banner"
               loading="eager"
+              width="1200"
+              height="400"
             />
 
             <div class="readme-avatar-row">
-              <img src="./img/logo.jpg" alt="Logo" class="avatar" />
+              <img
+                src="./img/logo.jpg"
+                alt="Logo"
+                class="avatar"
+                width="120"
+                height="120"
+                loading="lazy"
+              />
             </div>
 
             <h1 class="readme-title">Ítalo C Lopes</h1>
@@ -137,7 +146,7 @@
                 <div class="card-actions">
                   <a
                     class="btn-primary"
-                    href="https://galeria-drab.vercel.app/"
+                    href="https://galeria-tau-ten.vercel.app/"
                     target="_blank"
                     rel="noreferrer"
                     >Abrir demo</a
@@ -174,7 +183,9 @@
                     rel="noreferrer"
                     >Ver no GitHub</a
                   >
-                  <a class="btn-ghost" href="#contato">Falar comigo</a>
+                  <a class="btn-ghost" href="mailto:ossmoralus@gmail.com"
+                    >Falar comigo</a
+                  >
                 </div>
               </article>
             </div>
