--- a/src/politica-de-privacidade/index.html
+++ b/src/politica-de-privacidade/index.html
@@ -15,8 +15,8 @@
       <main class="site-main">
         <article class="surface-panel readme">
           <div class="readme-center">
-            <h1 class="readme-title">Política de privacidade</h1>
-            <p class="readme-kicker">Atualizada em 3 de janeiro de 2026</p>
+            <h1 class="readme-title">Política de Privacidade</h1>
+            <p class="readme-kicker">Última atualização: 01/02/2026</p>
             <div class="readme-actions">
               <a href="/" class="btn-ghost">Voltar ao site</a>
             </div>
@@ -25,88 +25,184 @@
           <hr class="readme-hr" />
 
           <section class="readme-section">
-            <h2 class="readme-h2">1. Visão geral</h2>
             <p class="readme-p">
-              Este site é um portfólio pessoal. Eu respeito sua privacidade e
-              busco coletar o mínimo possível de dados.
+              Esta Política de Privacidade está em conformidade com a Lei Geral
+              de Proteção de Dados (LGPD - Lei nº 13.709/2018) e descreve como
+              tratamos seus dados pessoais.
             </p>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">2. Quais dados podem ser coletados</h2>
+            <h2 class="readme-h2">1. Visão Geral</h2>
+            <p class="readme-p">
+              Este é um portfólio pessoal open source. Eu (Ítalo C Lopes)
+              respeito sua privacidade e busco coletar o mínimo possível de
+              dados. Esta página explica como os dados são tratados quando você
+              acessa este site.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">2. Dados que Coletamos</h2>
+
+            <h3 class="readme-h3">2.1. Dados de Navegação (Logs)</h3>
+            <p class="readme-p">
+              Como qualquer site, dados técnicos podem ser registrados
+              automaticamente pela plataforma de hospedagem:
+            </p>
+            <ul class="readme-list">
+              <li>Endereço IP</li>
+              <li>Tipo de navegador e sistema operacional</li>
+              <li>Data e hora de acesso</li>
+              <li>Páginas acessadas</li>
+            </ul>
+            <p class="readme-p">
+              <strong>Base legal:</strong> Legítimo interesse (Art. 7º, IX da
+              LGPD) para segurança e operação do site.
+            </p>
+
+            <h3 class="readme-h3">2.2. Cookies e Tecnologias Similares</h3>
+            <p class="readme-p">Este site utiliza:</p>
             <ul class="readme-list">
               <li>
-                Dados técnicos de acesso: seu navegador pode enviar informações
-                como endereço IP, data e hora do acesso, tipo de dispositivo e
-                páginas acessadas. Esses dados podem aparecer em logs da
-                hospedagem por motivos de segurança e operação.
+                <strong>Vercel Analytics:</strong> Para métricas de desempenho
               </li>
               <li>
-                Dados enviados por você ao entrar em contato: se você me enviar
-                email ou mensagem via WhatsApp, eu recebo o conteúdo da mensagem
-                e os dados de contato que você fornecer.
+                <strong>Vercel Speed Insights:</strong> Para otimização de
+                performance
               </li>
+            </ul>
+            <p class="readme-p">
+              Você pode desabilitar cookies nas configurações do seu navegador.
+            </p>
+
+            <h3 class="readme-h3">2.3. Dados de Contato</h3>
+            <p class="readme-p">
+              Se você enviar email ou mensagem via WhatsApp, receberemos:
+            </p>
+            <ul class="readme-list">
+              <li>Seu nome ou identificação</li>
+              <li>Endereço de email ou número de telefone</li>
+              <li>Conteúdo da mensagem</li>
+            </ul>
+            <p class="readme-p">
+              Esses dados são usados apenas para responder sua solicitação.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">3. Como Usamos os Dados</h2>
+            <ul class="readme-list">
+              <li>Responder mensagens e solicitações de contato</li>
+              <li>Manter o site seguro e operacional</li>
+              <li>Melhorar a qualidade e conteúdo do site</li>
+              <li>Análise geral de desempenho</li>
             </ul>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">3. Como os dados são usados</h2>
+            <h2 class="readme-h2">4. Compartilhamento de Dados</h2>
+            <p class="readme-p">
+              Não vendemos seus dados. Dados podem ser compartilhados apenas
+              com:
+            </p>
+
+            <h3 class="readme-h3">4.1. Vercel (Hospedagem)</h3>
+            <p class="readme-p">
+              O site é hospedado na Vercel. Dados de logs e analytics podem ser
+              processados conforme a Política de Privacidade.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">5. Armazenamento e Segurança</h2>
+
+            <h3 class="readme-h3">5.1. Localização dos Dados</h3>
+            <p class="readme-p">
+              Dados podem ser armazenados em servidores nos Estados Unidos
+              (Vercel), com certificações de segurança internacionais.
+            </p>
+
+            <h3 class="readme-h3">5.2. Medidas de Segurança</h3>
             <ul class="readme-list">
-              <li>Responder mensagens e solicitações de contato.</li>
-              <li>
-                Manter o site seguro e funcionando (por exemplo, via logs
-                técnicos).
-              </li>
-              <li>
-                Melhorar o conteúdo e a qualidade do site com base em
-                observações gerais.
-              </li>
+              <li>HTTPS/TLS para criptografia de dados em trânsito</li>
+              <li>Logs acessados apenas para operação e segurança</li>
+            </ul>
+
+            <h3 class="readme-h3">5.3. Retenção de Dados</h3>
+            <ul class="readme-list">
+              <li>Logs de acesso: Conforme política da Vercel</li>
+              <li>Mensagens de contato: Mantidas enquanto necessário</li>
+              <li>Analytics: Conforme políticas do Vercel Analytics</li>
             </ul>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">4. Cookies e tecnologias semelhantes</h2>
+            <h2 class="readme-h2">6. Seus Direitos (LGPD)</h2>
             <p class="readme-p">
-              Eu não configuro cookies intencionalmente para rastreamento neste
-              portfólio. Ainda assim, serviços de terceiros acessados por links
-              (como GitHub e WhatsApp) podem usar cookies e tecnologias próprias
-              conforme as políticas deles.
+              De acordo com a LGPD, você tem direito a solicitar:
+            </p>
+            <ul class="readme-list">
+              <li>Confirmação se seus dados são processados</li>
+              <li>Cópia dos dados que temos sobre você</li>
+              <li>Correção de dados incompletos ou desatualizados</li>
+              <li>Exclusão de dados desnecessários</li>
+              <li>Portabilidade de dados em formato estruturado</li>
+            </ul>
+            <p class="readme-p">
+              Para exercer esses direitos, entre em contato através dos canais
+              no rodapé.
             </p>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">5. Compartilhamento com terceiros</h2>
+            <h2 class="readme-h2">7. Links Externos</h2>
             <p class="readme-p">
-              Eu não vendo seus dados. O compartilhamento pode ocorrer apenas
-              quando necessário para operar o site (por exemplo, com a
-              plataforma de hospedagem) ou para atender exigências legais.
+              Este site pode conter links para GitHub e outros serviços
+              externos. Não somos responsáveis pelas políticas de privacidade
+              desses sites.
             </p>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">6. Retenção</h2>
+            <h2 class="readme-h2">8. Menores de Idade</h2>
             <p class="readme-p">
-              Mensagens enviadas por você podem ser mantidas pelo tempo
-              necessário para atendimento e histórico de conversa. Logs técnicos
-              podem ser mantidos conforme a política da hospedagem.
+              Este site não é direcionado a menores de 13 anos. Se você é
+              responsável por uma criança que forneceu dados, entre em contato.
             </p>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">7. Seus direitos</h2>
+            <h2 class="readme-h2">9. Transferência Internacional</h2>
             <p class="readme-p">
-              Se aplicável (por exemplo, sob a LGPD), você pode solicitar
-              informações sobre seus dados e pedir correção ou exclusão quando
-              possível. Para isso, entre em contato pelos canais disponíveis na
-              página inicial.
+              Dados podem ser processados fora do Brasil (EUA) em conformidade
+              com os requisitos da LGPD através de provedores com certificações
+              de segurança reconhecidas.
             </p>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">8. Alterações nesta política</h2>
+            <h2 class="readme-h2">10. Alterações a Esta Política</h2>
             <p class="readme-p">
-              Eu posso atualizar esta Política de privacidade periodicamente. A
-              data no topo indica a última revisão.
+              Esta política pode ser atualizada periodicamente. A data no topo
+              indica a versão mais recente.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">11. Contato</h2>
+            <p class="readme-p">
+              Para questões sobre privacidade ou para exercer seus direitos,
+              entre em contato através dos canais disponíveis no rodapé do site
+              (GitHub ou WhatsApp).
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <p class="readme-p">
+              <strong>Compromisso:</strong> Estou comprometido em proteger sua
+              privacidade e garantir a transparência no tratamento de dados
+              pessoais, em total conformidade com a LGPD.
             </p>
           </section>
         </article>
