--- a/src/termos-de-uso/index.html
+++ b/src/termos-de-uso/index.html
@@ -12,8 +12,8 @@
       <main class="site-main">
         <article class="surface-panel readme">
           <div class="readme-center">
-            <h1 class="readme-title">Termos de uso</h1>
-            <p class="readme-kicker">Atualizado em 3 de janeiro de 2026</p>
+            <h1 class="readme-title">Termos de Uso</h1>
+            <p class="readme-kicker">Última atualização: 01/02/2026</p>
             <div class="readme-actions">
               <a href="/" class="btn-ghost">Voltar ao site</a>
             </div>
@@ -24,71 +24,196 @@
           <section class="readme-section">
             <h2 class="readme-h2">1. Aceitação</h2>
             <p class="readme-p">
-              Ao acessar este site, você concorda com estes Termos de uso. Se
-              você não concordar com algum ponto, por favor não utilize o site.
+              Ao acessar este site (portfólio pessoal), você concorda com estes
+              Termos de Uso. Se não concordar, não utilize o site.
             </p>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">2. Finalidade do site</h2>
+            <h2 class="readme-h2">2. Descrição do Serviço</h2>
             <p class="readme-p">
-              Este é um portfólio pessoal, com o objetivo de apresentar
-              projetos, habilidades e formas de contato.
+              Este é um portfólio pessoal open source que apresenta projetos,
+              habilidades, um jogo da memória interativo e outros conteúdos
+              educativos.
             </p>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">3. Uso permitido</h2>
+            <h2 class="readme-h2">3. Licença MIT</h2>
+            <p class="readme-p">
+              O código-fonte deste projeto é disponibilizado sob a Licença MIT,
+              permitindo uso livre. O texto completo está no repositório.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">4. Uso Permitido</h2>
             <ul class="readme-list">
-              <li>
-                Você pode navegar e compartilhar links para as páginas do site
-                para fins informativos.
-              </li>
-              <li>
-                Você se compromete a não tentar interromper, explorar ou
-                prejudicar o funcionamento do site.
-              </li>
-              <li>
-                Você se compromete a não usar o site para fins ilegais, abusivos
-                ou que violem direitos de terceiros.
-              </li>
+              <li>Navegar e usar o conteúdo do site para fins informativos</li>
+              <li>Compartilhar links para as páginas do site</li>
+              <li>Usar o código-fonte conforme a Licença MIT</li>
             </ul>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">4. Conteúdo e propriedade intelectual</h2>
+            <h2 class="readme-h2">5. Condutas Proibidas</h2>
+            <ul class="readme-list">
+              <li>Tentar hackear, prejudicar ou sobrecarregar o site</li>
+              <li>Usar o site para fins ilegais ou abusivos</li>
+              <li>Remover avisos de copyright ou licensa</li>
+              <li>Fazer-se passar pelo proprietário do site</li>
+              <li>Violar direitos de terceiros</li>
+            </ul>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">6. Propriedade Intelectual</h2>
             <p class="readme-p">
-              Textos, imagens, identidade visual e outros materiais deste site
-              podem estar protegidos por direitos autorais e/ou direitos de
-              imagem. Reuso além do compartilhamento de links deve ser
-              solicitado previamente.
+              Textos, imagens e designs são protegidos por copyright. Reuso além
+              do permitido pela licença deve ser solicitado previamente.
             </p>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">5. Links externos</h2>
+            <h2 class="readme-h2">7. Links Externos</h2>
             <p class="readme-p">
-              Este site pode conter links para serviços e sites de terceiros
-              (por exemplo, GitHub, WhatsApp e plataformas de hospedagem). Esses
-              serviços têm seus próprios termos e políticas, e eu não controlo o
-              conteúdo ou as práticas deles.
+              O site contém links para GitHub e outros serviços. Não sou
+              responsável pelas práticas e conteúdo desses sites.
             </p>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">6. Disponibilidade e alterações</h2>
+            <h2 class="readme-h2">8. Disponibilidade</h2>
             <p class="readme-p">
-              Eu posso alterar, suspender ou descontinuar partes do site a
-              qualquer momento, sem aviso prévio. Também posso atualizar estes
-              Termos; a data no topo indica a última revisão.
+              Embora eu me esforce para manter o site disponível, não garanto
+              disponibilidade ininterrupta. Podem ocorrer manutenções,
+              atualizações ou problemas técnicos.
             </p>
           </section>
 
           <section class="readme-section">
-            <h2 class="readme-h2">7. Contato</h2>
+            <h2 class="readme-h2">9. Modificações</h2>
             <p class="readme-p">
-              Para dúvidas sobre estes Termos, use os canais disponíveis na
-              página inicial (email e/ou WhatsApp).
+              Reservo-me o direito de modificar, suspender ou descontinuar
+              partes do site, com ou sem aviso prévio.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">10. Isenção de Garantias</h2>
+            <p class="readme-p">
+              O site é fornecido "como está", sem garantias de qualquer tipo.
+              Não garanto disponibilidade ininterrupta, precisão do conteúdo ou
+              ausência de erros.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">11. Limitação de Responsabilidade</h2>
+            <p class="readme-p">
+              Não sou responsável por danos diretos, indiretos ou consequenciais
+              resultantes do uso ou impossibilidade de usar o site.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">12. Privacidade</h2>
+            <p class="readme-p">
+              O tratamento de dados pessoais é regido pela
+              <a href="/politica-de-privacidade/" class="link-primary"
+                >Política de Privacidade</a
+              >, em conformidade com a LGPD.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">13. Lei Aplicável</h2>
+            <p class="readme-p">
+              Estes termos são regidos pelas leis da República Federativa do
+              Brasil. Qualquer disputa será submetida à jurisdição dos tribunais
+              brasileiros.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">14. Alterações</h2>
+            <p class="readme-p">
+              Estes Termos podem ser atualizados periodicamente. A data no topo
+              indica a versão mais recente.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">15. Contato</h2>
+            <p class="readme-p">
+              Para questões sobre estes Termos, entre em contato através dos
+              canais disponíveis no rodapé do site (GitHub ou WhatsApp).
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <p class="readme-p">
+              <strong>Importante:</strong> Ao utilizar este site, você declara
+              ter lido e concordado com todos os termos e condições aqui
+              estabelecidos.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">9. Indenização</h2>
+            <p class="readme-p">
+              Você concorda em indenizar e isentar os mantenedores do projeto,
+              colaboradores e parceiros de quaisquer reclamações, danos,
+              obrigações, perdas, responsabilidades, custos ou dívidas, e
+              despesas (incluindo honorários advocatícios) resultantes de:
+            </p>
+            <ul class="readme-list">
+              <li>Seu uso e acesso ao Serviço</li>
+              <li>Sua violação destes Termos de Uso</li>
+              <li>Violação de quaisquer direitos de terceiros</li>
+            </ul>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">10. Privacidade e Proteção de Dados</h2>
+            <p class="readme-p">
+              O tratamento de dados pessoais é regido por nossa Política de
+              Privacidade, que está em conformidade com a Lei Geral de Proteção
+              de Dados (LGPD - Lei nº 13.709/2018).
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">11. Lei Aplicável e Jurisdição</h2>
+            <p class="readme-p">
+              Estes Termos de Uso serão regidos e interpretados de acordo com as
+              leis da República Federativa do Brasil, sem considerar seus
+              conflitos de disposições legais. Qualquer disputa será submetida à
+              jurisdição dos tribunais brasileiros.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">14. Alterações</h2>
+            <p class="readme-p">
+              Estes Termos podem ser atualizados periodicamente. A data no topo
+              indica a versão mais recente.
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <h2 class="readme-h2">15. Contato</h2>
+            <p class="readme-p">
+              Para questões sobre estes Termos, entre em contato através dos
+              canais disponíveis no rodapé do site (GitHub ou WhatsApp).
+            </p>
+          </section>
+
+          <section class="readme-section">
+            <p class="readme-p">
+              <strong>Importante:</strong> Ao utilizar este site, você declara
+              ter lido e concordado com todos os termos e condições aqui
+              estabelecidos.
             </p>
           </section>
         </article>
